--- a/Blockbuster/Views/Shared/_Layout.cshtml
+++ b/Blockbuster/Views/Shared/_Layout.cshtml
@@ -19,14 +19,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+           
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Adds", "Add", "Movie")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-
+                <li>@Html.ActionLink("Add Movies", "Add", "Movie")</li>
             </ul>
         </div>
     </div>
