--- a/Blockbuster/Views/Shared/_Layout.cshtml
+++ b/Blockbuster/Views/Shared/_Layout.cshtml
@@ -19,11 +19,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-           
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Add Movies", "Add", "Movie")</li>
+                <li>@Html.ActionLink("List of Movies", "List", "Movie")</li>
             </ul>
         </div>
     </div>
@@ -32,7 +32,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; @DateTime.Now.Year - BlockBuster Movies</p>
     </footer>
 </div>
 
