--- a/Blockbuster/Views/Movie/Add.cshtml
+++ b/Blockbuster/Views/Movie/Add.cshtml
@@ -26,9 +26,10 @@
                 </div>
                 <br/>
                 <br/>
-                <div class="row">
-                    <div class="col-lg-12 col-lg-push-10">
+                <div class="row col-lg-12">
+                    <div class="col-lg-offset-5">
                         <span> <button class="btn btn-success" data-bind="click:saveMovie" data-toggle="tooltip" data-placement="top" title="Click to Submit Movie"><i class="glyphicon glyphicon-floppy-save"></i> Save </button></span>
+                        
                         <span><button class="btn btn-danger" data-bind="click:resetInfo" data-toggle="tooltip" data-placement="top" title="Click to clear text"><i class="glyphicon glyphicon-refresh"></i> Reset  </button></span>
                     </div>
                 </div>
@@ -45,7 +46,8 @@
             self.genre = ko.observable("");
             self.saveMovie = function() {
                 sendViewModelToController("/Movie/Create", ko.toJSON(self),function() {
-                        alert("Movie Entry Created");
+                    alert("Movie Entry Created");
+                    changeLocation("/Movie/Add/", true);
                     });
             };
             self.resetInfo = function() {
