--- a/Blockbuster/Views/Shared/_Layout.cshtml
+++ b/Blockbuster/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" onclick="goToHome()" style="cursor: pointer"><i class="glyphicon glyphicon-home"></i></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -30,11 +31,16 @@
 </div>
 <div class="container body-content">
     @RenderBody()
-    <hr/>
-    <footer>
-        <p>&copy; @DateTime.Now.Year - BlockBuster Movies</p>
-    </footer>
+    
+
 </div>
+<script>
+    var rooturl = "@Href("~/")";
+    goToHome = function() {
+        changeLocation("/Movie/Login");
+    };
+
+</script>
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
